--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 
@@ -5,7 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static '/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
 
 </head>
 
@@ -13,7 +16,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <div class="d-flex w-100 justify-content-between align-items-center">
-                <a class="navbar-brand" href="#"></a>
+                <a class="navbar-brand" href="{% url 'index' %}">Ask Overflow</a>
 
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -21,7 +24,7 @@
                 </form>
 
                 <div class="d-flex gap-1">
-                    <img src="asda.jpg" alt="Avatar" class="img-thumbnail">
+                    <img src="{% static '/img/profile.jpg' %}" alt="Avatar" class="img-thumbnail" width="50" height="50">
                     <div>
                         <div>
                             dr pepper
@@ -36,7 +39,10 @@
 
     <main class="container mt-3">
         <div class="row">
-            <div class="col-9"></div>
+            <div class="col-9">
+                {% block content %}
+                {% endblock %}
+            </div>
             <div class="col">
                 <section class="mb-3">
                     <h2>Popular Tags</h2>
@@ -70,6 +76,6 @@
 
         </div>
     </main>
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{% static '/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
