--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -29,7 +29,7 @@
                         <div>
                             dr pepper
                         </div>
-                        <a href="#">settings</a>
+                        <a href="{% url 'settings' %}">settings</a>
                         <a href="#">log out</a>
                     </div>
                 </div>
@@ -41,20 +41,18 @@
         <div class="row">
             <div class="col-9">
                 {% block content %}
+
                 {% endblock %}
             </div>
             <div class="col">
                 <section class="mb-3">
                     <h2>Popular Tags</h2>
                     <div>
-                        <span class="badge text-bg-primary">Primary</span>
-                        <span class="badge text-bg-secondary">Secondary</span>
-                        <span class="badge text-bg-success">Success</span>
-                        <span class="badge text-bg-danger">Danger</span>
-                        <span class="badge text-bg-warning">Warning</span>
-                        <span class="badge text-bg-info">Info</span>
-                        <span class="badge text-bg-light">Light</span>
-                        <span class="badge text-bg-dark">Dark</span>
+                        {% for tag in tags %}
+
+                        {% include 'components/tag_item.html' %}
+
+                        {% endfor %}
                     </div>
                 </section>
 
@@ -62,11 +60,11 @@
                     <h2>Best members</h2>
                     <div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><a href="#">Member</a></li>
-                            <li class="list-group-item"><a href="#">Member</a></li>
-                            <li class="list-group-item"><a href="#">Member</a></li>
-                            <li class="list-group-item"><a href="#">Member</a></li>
-                            <li class="list-group-item"><a href="#">Member</a></li>
+                            {% for member in members %}
+
+                            {% include 'components/member_item.html' %}
+
+                            {% endfor %}
                         </ul>
                     </div>
                 </section>
