--- a/templates/question.html
+++ b/templates/question.html
@@ -3,117 +3,28 @@
 
 {% block content %}
 
-<div class="d-flex flex-column gap-3">
-    <div class="row">
-        <div class="col-3">
-            <div class="border mb-2" style="height: 170px; text-align: center" >
-                        <img src="../static/img/amogus.jpg" alt="Avatar" class="img-fluid" width="100" height="100">
-            </div>
-            <input class="form-control" type="number" value="5" placeholder="Default input"
-                   aria-label="default input example">
-        </div>
-        <div class="col-9">
-
-            <h4 class="card-title"><a href="">{{ question.title }}</a></h4>
-            <p class="card-text">{{ question.content }}
-            </p>
-
-            <div class="d-flex gap-5">
-                <div>
-                    Tags:
-                    <a href="#" class="card-link">Another link</a>
-                    <a href="#" class="card-link">Another link</a>
-                    <a href="#" class="card-link">Another link</a>
-                    <a href="#" class="card-link">Another link</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <hr>
+<div class="d-flex flex-column gap-3">
+    {% for answer in answers %}
 
-    <div class="card w-100" style="width: 18rem;">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-3">
-                    <div class="border mb-2" style="height: 100px; text-align: center" >
-                        <img src="../static/img/amogus.jpg" alt="Avatar" class="img-fluid" width="50" height="50">
-                    </div>
-                    <input class="form-control" type="number" value="5" placeholder="Default input"
-                        aria-label="default input example">
-                </div>
-                <div class="col-9">
+    {% include 'components/answer_item.html' %}
 
-                    <p class="card-text">Some quick example text to build on the card title and make up
-                        the bulk
-                        of the card's content.</p>
-
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1">
-                        <label class="form-check-label" for="flexCheckDefault1">
-                            Correct!
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="card w-100" style="width: 18rem;">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-3">
-                    <div class="border mb-2" style="height: 100px; text-align: center" >
-                        <img src="../static/img/amogus.jpg" alt="Avatar" class="img-fluid" width="50" height="50">
-                    </div>
-                    <input class="form-control" type="number" value="5" placeholder="Default input"
-                        aria-label="default input example">
-                </div>
-                <div class="col-9">
-
-                    <p class="card-text">Some quick example text to build on the card title and make up
-                        the bulk
-                        of the card's content.</p>
-
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-                        <label class="form-check-label" for="flexCheckDefault2">
-                            Correct!
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% endfor %}
+</div>
 
     <hr>
 
     <form>
         <div class="form-floating">
             <textarea class="form-control mb-3" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" required></textarea>
-            <label for="floatingTextarea2">Enter ur answer here</label>
+            <label for="floatingTextarea2">Enter your answer here</label>
             <div class="row-3 gap-3">
                 <button class="btn custom-btn" type="submit">Answer</button>
             </div>
         </div>
     </form>
-</div>
-<nav aria-label="Page navigation example" class="mt-3">
-    <ul class="pagination">
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-            </a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-            </a>
-        </li>
-    </ul>
-</nav>
+
+
+{% include 'components/pagination.html' %}
 
 {% endblock %}
