--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {%block content %}
 <div class="d-flex gap-3 align-items-center">
 <h1>New Questions</h1>
-<a href="#">Hot Questions</a>
+<a href="{% url 'hot' %}">Hot Questions</a>
 </div>
 
 <div class="d-flex flex-column gap-3">
