--- a/templates/question.html
+++ b/templates/question.html
@@ -1,10 +1,29 @@
 {%extends 'layouts/base.html' %}
 
+{% load static %}
 
 {% block content %}
-
-    <hr>
 <div class="d-flex flex-column gap-3">
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="border mb-2" style="height: 170px">
+                                <img src="{% static '/img/amogus.jpg' %}" alt="Avatar" class="img-fluid" width="100" height="100">
+                            </div>
+                            <input class="form-control" type="number" value="5" placeholder="Default input"
+                                   aria-label="default input example">
+                        </div>
+                        <div class="col-9">
+                            <h4 class="card-title">{{question.title}}</h4>
+                            <p class="card-text">{{question.content}}
+                            </p>
+                            <div class="d-flex gap-5">
+                                {% for tag in question.tags %}
+                                {% include 'components/tag_item.html' %}
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+    <hr>
     {% for answer in answers %}
 
     {% include 'components/answer_item.html' %}
