--- a/templates/components/answer_item.html
+++ b/templates/components/answer_item.html
@@ -7,9 +7,8 @@
                 <div class="border mb-2" style="height: 100px; text-align: center" >
                     <img src="{% static '/img/amogus.jpg' %}" alt="Avatar" class="img-fluid" width="50" height="50">
                 </div>
-                <input class="form-control" type="number" value="5" placeholder="Default input"
+                <input class="form-control" type="number" value={{answer.likes}} placeholder="Default input"
                     aria-label="default input example">
-
             </div>
             <div class="col-9">
 
