--- a/templates/components/member_item.html
+++ b/templates/components/member_item.html
@@ -1,3 +1,3 @@
 {% load static %}
 
-<li class="list-group-item"><a href="#">{{member.name}}</a></li>
+<li class="list-group-item"><a href="#">{{member.user.username}}</a></li>
