--- a/templates/components/question_item.html
+++ b/templates/components/question_item.html
@@ -7,7 +7,7 @@
                     <div class="border mb-2" style="height: 100px; text-align: center" >
                         <img src="{% static '/img/amogus.jpg' %}" alt="Avatar" class="img-fluid" width="50" height="50">
                     </div>
-                    <input class="form-control" type="number" value="5" placeholder="Default input"
+                    <input class="form-control" type="number" value="{{question.likes}}" placeholder="Default input"
                         aria-label="default input example">
 
                 </div>
@@ -17,11 +17,11 @@
                     <p class="card-text">{{ question.content }}</p>
 
                     <div class="d-flex gap-5">
-                        <a href="{% url 'question' question_id=question.id %}" class="card-link">Answer (3)</a>
+                        <a href="{% url 'question' question_id=question.id %}" class="card-link">Answer ({{ question.amount_of_answers }})</a>
                         <div>
 
                             Tags:
-                            {% for tag in question.tags%}
+                            {% for tag in question.tags.all%}
                             {% include 'components/question_tags.html' %}
                             {% endfor %}
                         </div>
