--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.html' %}
 
+{% load bootstrap5 %}
+
 {% block content %}
 
 <div class="d-flex gap-3 align-items-center">
@@ -7,30 +9,20 @@
 </div>
 
 
-<p style="color: red">Sorry, wrong password</p>
-<form>
-      <div class="row mb-3">
-        <label for="inputEmail3" class="col-sm-1 col-form-label">Email</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" id="inputEmail3" placeholder="Enter your login here" required maxlength="20">
-        </div>
-      </div>
-      <div class="row mb-3">
-        <label for="inputPassword3" class="col-sm-1 col-form-label">Password</label>
-        <div class="col-sm-3">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="********" required maxlength="20">
-        </div>
-      </div>
-      <div class="row mb-3">
-        <div class="col-sm-11 offset-sm-1">
-            <button class="btn btn-outline-success" type="submit">Log in</button>
-        </div>
-    </div>
+<form method="POST">
+    {% csrf_token %}
     <div class="row mb-3">
-        <div class="col-sm-11 offset-sm-1">
-            <a href="{% url 'signup' %}">Create new account</a>
+        <div class="col-sm-5">
+            {% bootstrap_form form %}
+
+            {%  buttons %}
+
+            <button class="btn btn-outline-success" type="submit">Log in</button>
+
+            {% endbuttons %}
         </div>
     </div>
+    <a href="{% url 'signup' %}">Create new account</a>
 </form>
 
 {% endblock %}
