--- a/templates/settings.html
+++ b/templates/settings.html
@@ -10,7 +10,7 @@
     <h1>Settings: {{ user.username }}</h1>
 </div>
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="row mb-3">
         <div class="col-sm-5">
