--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,7 +8,7 @@
     <h1>Registration</h1>
 </div>
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="row mb-3">
         <div class="col-sm-5">
