--- a/templates/question.html
+++ b/templates/question.html
@@ -5,7 +5,6 @@
 {% load static %}
 
 {% block content %}
-    <hr>
 <div class="d-flex flex-column gap-3">
                     <div class="row">
                         <div class="col-3">
@@ -38,10 +37,16 @@
     <form method="POST">
         {% csrf_token %}
         <div class="form-floating">
+
             {% bootstrap_form form %}
+
+            {%  buttons %}
+
             <div class="row-3 gap-3">
                 <button class="btn custom-btn" type="submit">Answer</button>
             </div>
+            {%  endbuttons %}
+
         </div>
     </form>
 
