--- a/templates/components/question_item.html
+++ b/templates/components/question_item.html
@@ -1,14 +1,15 @@
 {% load static %}
 
-<div class="card w-100" style="width: 18rem;">
+<div class="card w-100"  style="width: 18rem;" data-id="{{ question.id }}">
         <div class="card-body">
             <div class="row">
                 <div class="col-3">
                     <div class="border mb-2" style="height: 100px; text-align: center" >
                         <img src="{% static '/img/amogus.jpg' %}" alt="Avatar" class="img-fluid" width="50" height="50">
                     </div>
-                    <input class="form-control" type="number" value="{{question.likes}}" placeholder="Default input"
-                        aria-label="default input example">
+                    <button class="like-button" type="submit">
+                    ❤️ <span class="like-counter">{{ question.likes }}</span>
+                    </button>
 
                 </div>
                 <div class="col-9">
