--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -9,6 +9,8 @@
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="{% static '/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static '/css/main.css' %}">
+    {% csrf_token %}
+
 
 </head>
 
@@ -86,5 +88,6 @@
         </div>
     </main>
     <script src="{% static '/js/bootstrap.min.js' %}"></script>
+    <script src="{% static '/js/main.js' %}"></script>
 </body>
 </html>
