--- a/templates/components/question_item.html
+++ b/templates/components/question_item.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="card w-100"  style="width: 18rem;" data-id="{{ question.id }}">
+<div class="card w-100 question-card"  style="width: 18rem;" data-id="{{ question.id }}">
         <div class="card-body">
             <div class="row">
                 <div class="col-3">
