--- a/templates/components/answer_item.html
+++ b/templates/components/answer_item.html
@@ -17,7 +17,7 @@
                  <div class="form-check">
                     {% if is_author %}
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="{{ answer.id }}" id="flexCheckDefault1" {% if answer.is_correct %}checked{% endif %}>
+                        <input class="form-check-input" type="checkbox" data-id="{{ answer.id }}" id="flexCheckDefault1" {% if answer.correct %}checked{% endif %}>
                         <label class="form-check-label" for="flexCheckDefault1">
                             Correct!
                         </label>
