added real-time messages support

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -20,7 +20,7 @@
             <div class="d-flex w-100 justify-content-between align-items-center">
                 <a class="navbar-brand" href="{% url 'index' %}">Ask Overflow</a>
 
-                <form class="d-flex" role="search">
+                <form class="d-flex" role="search" name="search-form">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Ask</button>
                 </form>
